# DjangoApp

./: .env.example  README.md  auth_fixture.json  blog_fixture.json  catalog_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_is_published.py
blog/templates/blog/: base.html  header.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_created_at_and_more.py  0003_alter_product_options_product_status.py  0004_alter_product_status.py  0005_alter_product_status.py  0006_product_owner.py  0007_alter_product_options.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  header.html  home.html  product_confirm_delete.html  product_detail.html  product_details.html  product_form.html  product_list.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_avatar_alter_customuser_first_name_and_more.py
users/templates/users/: login.html  register.html  user_detail.html  user_form.html
