[tool.poetry]
name = "djangotask"
version = "0.1.0"
description = ""
authors = ["Mark Volkov <markasch67@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.1"
dotenv = "^0.9.9"
psycopg2 = "^2.9.10"
pillow = "^11.2.1"
ipython = "^9.2.0"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
